shift urls to github

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 </HEAD>
 <BODY>
 	<div id="header">
-		<a href="http://clesiemo3.com">CLESIEMO3</a>
+		<a href="http://clesiemo3.github.io/">CLESIEMO3</a>
 	</div>
 	<div id="container">
 		<div id="blog" class="column blue-gradient">
 			<a href="http://blog.clesiemo3.com">BLOG</a>
 		</div>
 		<div id="creations" class="column blue-gradient">
-			<a href="http://clesiemo3.com/creations/">CREATIONS</a>
+			<a href="/creations/">CREATIONS</a>
 		</div>		
 		<div id="resource" class="column blue-gradient">
 			<a href="#">RESOURCES</a>
