fixed creations index header to point to new domain

--- a/creations/index.html
+++ b/creations/index.html
@@ -14,7 +14,7 @@
 </HEAD>
 <BODY>
 	<div id="header">
-		<a href="http://clesiemo3.com">CLESIEMO3</a>
+		<a href="http://clesiemo3.github.io/">CLESIEMO3</a>
 	</div>
 	<div id="container">
 			<div class="left-float column blue-gradient">
