--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---layout:default
+title: Jimmy
+---
 <HTML>
 <HEAD>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +22,6 @@
 		</div>
 	</div>
 	<div id="footer">
-	&nbsp
 	</div>
 </BODY>
 </HTML>
