--- a/index.html
+++ b/index.html
@@ -1,27 +1,7 @@
----layout:default
+--- 
+layout:default
 title: Jimmy
----
-<HTML>
-<HEAD>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<LINK href="/css/main.css" rel="stylesheet" type="text/css">
-</HEAD>
-<BODY>
-	<div id="header">
-		<a href="http://clesiemo3.github.io/">CLESIEMO3</a>
-	</div>
-	<div id="container">
-		<div id="blog" class="column blue-gradient">
-			<a href="http://blog.clesiemo3.com">BLOG</a>
-		</div>
-		<div id="creations" class="column blue-gradient">
-			<a href="/creations/">CREATIONS</a>
-		</div>		
-		<div id="resource" class="column blue-gradient">
-			<a href="#">RESOURCES</a>
-		</div>
-	</div>
-	<div id="footer">
-	</div>
-</BODY>
-</HTML>
+--- 
+<div class="blurb">
+	<h1>test</h1>
+</div>
