customizing working site

--- a/creations/index.html
+++ b/creations/index.html
@@ -1,31 +1,9 @@
-<HTML>
-<HEAD>
-<LINK href="/css/main.css" rel="stylesheet" type="text/css">
-<STYLE>
-.left-float {
-	opacity: 1;
-}
+---
+layout: default
+title: clesiemo3
+---
 
-.right-float {
-	opacity: 1;
-}
-
-</STYLE>
-</HEAD>
-<BODY>
-	<div id="header">
-		<a href="http://clesiemo3.github.io/">CLESIEMO3</a>
-	</div>
-	<div id="container">
-			<div class="left-float column blue-gradient">
-				<a href="rizzShowPodcast.html">Rizz Show Podcast</a>
-			</div>
-			<div class="right-float column blue-gradient">
-				<a href="https://github.com/clesiemo3">My GitHub</a>
-			</div>
-	</div>
-	<div id="footer">
-	A website by James Moore
-	</div>
-</BODY>
-</HTML>
+<ul>
+<li><a href="rizzShowPodcast.html">Rizz Show Daily Podcast</a></li>
+<li><a href="https://github.com/clesiemo3">My GitHub</a></li>
+</ul>
