about me game linkage

--- a/about/index.html
+++ b/about/index.html
@@ -18,9 +18,12 @@ title: About Me
 	Diablo3<br>
 	Hearthstone<br>
 	Heroes of the Storm<br>
+	<a href="https://www.hotslogs.com/Player/Profile?PlayerID=3515285">
+		<img alt="HOTS Logs Player Profile" src="https://www.hotslogs.com/Images/PlayerProfileImage/3515285.jpeg" width="563" height="125" />
+	</a><br>
 	Overwatch (during open beta weekends)<br>
 	<br>
-	League of Legends - Kardone<br>
+	League of Legends - <a href="http://www.lolking.net/summoner/na/20482072">Kardone</a><br>
 	Steam - Kardone<br>
 	<h4>Find me here</h4>
 		<ul class="contacts">
